@@ -457,7 +457,8 @@ omx_ioctl_wait_event(struct omx_endpoint * endpoint, void __user * uparam)
 			goto wakeup;
 		}
 		setup_timer(&timer, timer_handler, (unsigned long) &waiter);
-		__mod_timer(&timer, timer_jiffies);
+		/* timer not pending yet, use the regular mod_timer() */
+		mod_timer(&timer, timer_jiffies);
 		dprintk(EVENT, "wait event timer setup at %lld (now is %lld)\n",
 			(unsigned long long) timer_jiffies, (unsigned long long) current_jiffies);
 	}
