@@ -1,6 +1,7 @@
 
 * Report when the peer table is full and some peers failed
   to be added.
+* Add some early support for Linux kernel 2.6.30.
 
 
 Open-MX 1.0.902 aka 1.1-rc2 (March 25th 2009, svn r2528)
